update to the wording

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <img src="img/isc2cc.png" alt="">
             
             <div class="credly">
-              <a href= "https://www.credly.com/badges/5aeea40e-2a2b-4c89-9f32-b0221f83a12e/public_url"><p>AWS Cloud Practitioner<a></p><p></p>
+              <a href= "https://www.credly.com/badges/5aeea40e-2a2b-4c89-9f32-b0221f83a12e/public_url"><p>Certified in Cybersecurity (CC)<a></p><p></p>
               
             </div>
           </ul>
