--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
             <a href= "mailto:hiren@hirenkamani.co.uk"><p>hiren@hirenkamani.co.uk</p><a></p>
             <i class="fas fa-envelope"></i>
           </div>
-          <div class="linkedin">
+          
+          <a href="https://linkedin.com/in/hirenkamani/url" class="social-icon si-rounded si-small si-linkedin">
+            <i class="icon-linkedin"></i>
+            <i class="icon-linkedin"></i>
+         </a>
+
+        </div> class="linkedin">
             <a href= "www.linkedin.com/in/hirenkamani"><p>Hiren Kamani<a></p>
             <i class="fab fa-linkedin"></i>
           </div>
           <div class="github">
-            <a href= "github.com/hkamani"><p>Hiren Kamani<a></p><p></p>
+            <a href= "www.github.com/hkamani"><p>github<a></p><p></p>
             <i class="fab fa-github"></i>
           </div>
           <div class="website">
@@ -46,7 +52,7 @@
               <i class="fa-brands fa-chrome"></i>
           </div>
           <div class="phone">
-            <a href= "">+447475483087</a><p></p>
+            <a href= "">+447476483087</a><p></p>
             <i class="fas fa-phone"></i>
           </div>
         </div>
